# compressive-holography-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cuh  common.h  compressive_holography.cpp  compressive_holography.cu  compressive_holography.cuh  compressive_holography.h  fft.cpp  fft.cu  fft.cuh  fft.h  fista.cuh  fista.h  image.h  speed_test.cpp  speed_test.cu  test.cpp  test.cu  total_variation.cpp  total_variation.cu  total_variation.cuh  total_variation.h
